--- a/public/markdown/mdeditor.html
+++ b/public/markdown/mdeditor.html
@@ -66,36 +66,178 @@
 
 ------
 
-我们理解您需要更便捷更高效的工具记录思想，整理笔记、知识，并将其中承载的价值传播给他人，**Markdown** 是我们给出的答案 —— 我们为记录思想和分享知识提供更专业的工具。 您可以使用 Cmd Markdown：
-
-&gt; * 整理知识，学习笔记
-&gt; * 发布日记，杂文，所见所想
-&gt; * 撰写发布技术文稿（代码支持）
-&gt; * 撰写发布学术论文（LaTeX 公式支持）
-
-![cmd-markdown-logo](https://www.zybuluo.com/static/img/logo.png)
-
-&gt; 请保留此份 Cmd Markdown 的欢迎稿兼使用说明，如需撰写新稿件，点击顶部工具栏右侧的 &lt;i class=&#34;icon-file&#34;&gt;&lt;/i&gt; **新文稿** 或者使用快捷键 `Ctrl+Alt+N`。
-
-------
-
 ## 什么是 Markdown
 
 Markdown 是一种方便记忆、书写的纯文本标记语言，用户可以使用这些标记符号以最小的输入代价生成极富表现力的文档：譬如您正在阅读的这份文档。它使用简单的符号标记不同的标题，分割不同的段落，**粗体** 或者 *斜体* 某些文字，更棒的是，它还可以
 
-### 1. 制作一份待办事宜 [Todo 列表](https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown#13-待办事宜-todo-列表)
+------
 
-- [ ] 支持以 PDF 格式导出文稿
-- [ ] 改进 Cmd 渲染算法，使用局部渲染技术提高渲染效率
-- [x] 新增 Todo 列表功能
-- [x] 修复 LaTex 公式渲染问题
-- [x] 新增 LaTex 公式编号功能
+## Markdown 简明语法手册
 
-### 2. 书写一个质能守恒公式[^LaTeX]
+### 1. 斜体和粗体
 
-$$E=mc^2$$
+使用 * 和 ** 表示斜体和粗体。
 
-### 3. 高亮一段代码[^code]
+示例：
+
+这是 *斜体*，这是 **粗体**。
+
+### 2. 分级标题
+
+使用 === 表示一级标题，使用 --- 表示二级标题。也可以选择在行首加井号表示不同级别的标题 (H1-H6)，例如：# H1, ## H2, ### H3，#### H4, ##### H5, ###### H6。
+
+示例：
+
+```
+这是一个一级标题
+============================
+
+这是一个二级标题
+--------------------------------------------------
+
+# 这也是一个一级标题
+
+## 这是二级标题
+
+### 这是一个三级标题
+
+#### 这是4级标题
+
+##### 这是5级标题
+
+###### 这是6级标题
+```
+
+### 3. 外链接
+
+使用 \[描述](链接地址) 为文字增加外链接。
+
+示例：
+
+这是去往 [本人博客](http://yangyxd.github.com) 的链接。
+
+这是一个自动发现的超链接 http://yangyxd.github.com
+
+### 4. 无序列表
+
+使用 *，+，- 表示无序列表。
+
+示例：
+
+- 无序列表项 一
+- 无序列表项 二
+- 无序列表项 三
+
+### 5. 有序列表
+
+使用数字和点表示有序列表。
+
+示例：
+
+1. 有序列表项 一
+2. 有序列表项 二
+3. 有序列表项 三
+
+### 6. 文字引用
+
+使用 &gt; 表示文字引用。
+
+示例：
+
+&gt; 野火烧不尽，春风吹又生。
+
+### 7. 行内代码块
+
+使用 \`代码` 表示行内代码块。
+
+示例：
+
+让我们聊聊 `html`。
+
+### 8.  代码块
+
+使用 **四个缩进空格** 表示代码块。
+
+示例：
+
+    这是一个代码块，此行左侧有四个不可见的空格。
+
+### 9.  插入图像
+
+使用 \!\[描述](图片链接地址) 插入图像。
+
+示例：
+
+![我的头像](https://www.baidu.com/img/flexible/logo/pc/result.png)
+
+### 10. 删除线
+
+使用 ~~ 表示删除线。
+
+~~这是一段错误的文本。~~
+
+### 11. 标签分类
+
+在编辑区任意行的列首位置输入以下代码给文稿标签：
+
+标签： 数学 英语 Markdown
+
+### 12. 内嵌图标
+
+使用
+
+    :fa-weibo:
+    :weibo:
+    或
+    &lt;i class="icon-weibo"&gt;&lt;/i&gt;
+
+即显示微博的图标： &lt;i class="icon-weibo icon-2x"&gt;&lt;/i&gt; :weibo:
+
+替换 上述的 `weibo` 替换掉以显示不同的图标，例如：
+
+:fa-calendar: :fa-bullseye: :compass: :fa-font: :fa-qrcode: :fa-pencil: :forward: :fire:
+
+更多的图标和玩法可以参看 [font-awesome](http://fortawesome.github.io/Font-Awesome/3.2.1/icons/) 官方网站。
+
+### 13. 注脚
+
+使用 [^keyword] 表示注脚。
+
+这是一个注脚[^footnote]的样例。
+
+这是第二个注脚[^footnote2]的样例。
+
+[^footnote]: 这是一个 *注脚* 的 **文本**。
+
+[^footnote2]: 这是另一个 *注脚* 的 **文本**。
+
+### 14. LaTeX 公式
+
+$ 表示行内公式：
+
+质能守恒方程可以用一个很简洁的方程式 $E=mc^2$ 来表达。
+
+$$ 表示整行公式：
+
+$$\sum_{i=1}^n a_i=0$$
+
+$$f(x_1,x_x,\ldots,x_n) = x_1^2 + x_2^2 + \cdots + x_n^2 $$
+
+$$\sum^{j-1}_{k=0}{\widehat{\gamma}_{kj} z_k}$$
+
+访问 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference) 参考更多使用方法。
+
+### 15. 加强的代码块
+
+支持四十一种编程语言的语法高亮的显示，行号显示。
+
+非代码示例：
+
+```
+$ sudo apt-get install vim-gnome
+```
+
+Python 示例：
 
 ```python
 @requires_authorization
@@ -107,7 +249,7 @@ if __name__ == &#39;__main__&#39;:
     print &#39;hello world&#39;
 ```
 
-### 4. 高效绘制 [流程图](https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown#7-流程图)
+### 16. 流程图
 
 ```flow
 st=&gt;start: Start
@@ -120,15 +262,17 @@ cond(yes)-&gt;e
 cond(no)-&gt;op
 ```
 
-### 5. 高效绘制 [序列图](https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown#8-序列图)
+### 17. 序列图
 
 ```seq
-Alice-&gt;Bob: Hello Bob, how are you?
-Note right of Bob: Bob thinks
-Bob--&gt;Alice: I am good thanks!
+Title: Here is a title
+A-&gt;B: Normal line
+B--&gt;C: Dashed line
+C-&gt;&gt;D: Open arrow
+D--&gt;&gt;A: Dashed open arrow
 ```
 
-### 6. 高效绘制 [甘特图](https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown#9-甘特图)
+### 17. 甘特图
 
 ```gantt
     title 项目开发流程
@@ -146,7 +290,61 @@ Bob--&gt;Alice: I am good thanks!
         验收: 3d
 ```
 
-### 7. 绘制表格
+### 18. PlantUML
+
+#### PlantUML 序列图：
+```plantuml
+@startuml
+Alice-&gt;Bob: Hello Bob, how are you?
+Note right of Bob: Bob thinks
+Bob--&gt;Alice: I am good thanks!
+@enduml
+```
+#### PlantUML 流程图：
+```plantuml
+@startuml
+start
+    :开始;
+partition 后端处理{
+    :处理中;
+    if(会员ID?) then
+        :返回token;
+    else
+        :返回消息，需要注册/绑定;
+    endif;
+}
+    if(token?) then
+        :进入主界面;
+        else
+        :进入注册绑定解密;
+        endif;
+stop
+@enduml
+```
+
+更多语法参考：[PlantUML 官网](https://plantuml.com/zh/)
+
+### 19. Mermaid 流程图
+
+```graphLR
+    A[Hard edge] --&gt;|Link text| B(Round edge)
+    B --&gt; C{Decision}
+    C --&gt;|One| D[Result one]
+    C --&gt;|Two| E[Result two]
+```
+
+#### 更多语法参考：[Mermaid 流程图语法参考](https://knsv.github.io/mermaid/#flowcharts-basic-syntax)
+
+### 20. Mermaid 序列图
+
+```sequence
+    Alice-&gt;John: Hello John, how are you?
+    loop every minute
+        John--&gt;Alice: Great!
+    end
+```
+
+### 21. 表格支持
 
 | 项目        | 价格   |  数量  |
 | --------   | -----:  | :----:  |
@@ -154,27 +352,59 @@ Bob--&gt;Alice: I am good thanks!
 | 手机        |   \$12   |   12   |
 | 管线        |    \$1    |  234  |
 
-### 8. 更详细语法说明
+### 22. 定义型列表
 
-想要查看更详细的语法说明，可以参考我们准备的 [Markdown 简明语法手册][1]，进阶用户可以参考 [Markdown 高阶语法手册][2] 了解更多高级功能。
+名词 1
+:   定义 1（左侧有一个可见的冒号和四个不可见的空格）
 
-总而言之，不同于其它 *所见即所得* 的编辑器：你只需使用键盘专注于书写文本内容，就可以生成印刷级的排版格式，省却在键盘和工具栏之间来回切换，调整内容和格式的麻烦。**Markdown 在流畅的书写和印刷级的阅读体验之间找到了平衡。** 目前它已经成为世界上最大的技术分享网站 GitHub 和 技术问答网站 StackOverFlow 的御用书写格式。
+代码块 2
+:   这是代码块的定义（左侧有一个可见的冒号和四个不可见的空格）
 
----
+        代码块（左侧有八个不可见的空格）
 
-再一次感谢您花费时间阅读这份欢迎稿，点击 &lt;i class=&#34;icon-file&#34;&gt;&lt;/i&gt; (Ctrl+Alt+N) 开始撰写新的文稿吧！祝您在这里记录、阅读、分享愉快！
+### 23. 待办事宜 Todo 列表
 
-作者 [@ghosert][3]
-2016 年 07月 07日
+使用带有 [ ] 或 [x] （未完成或已完成）项的列表语法撰写一个待办事宜列表，并且支持子列表嵌套以及混用Markdown语法，例如：
 
-[^LaTeX]: 支持 **LaTeX** 编辑显示支持，例如：$\sum_{i=1}^n a_i=0$， 访问 [MathJax][4] 参考更多使用方法。
+    - [ ] **Markdown 开发**
+        - [ ] 支持以 PDF 格式导出文稿
+    - [ ] **七月旅行准备**
+        - [ ] 准备邮轮上需要携带的物品
+        - [ ] 浏览日本免税店的物品
+        - [x] 购买蓝宝石公主号七月一日的船票
 
-[^code]: 代码高亮功能支持包括 Java, Python, JavaScript 在内的，**四十一**种主流编程语言。
+对应显示如下待办事宜 Todo 列表：
 
-[1]: https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown
-[2]: https://www.zybuluo.com/mdeditor?url=https://www.zybuluo.com/static/editor/md-help.markdown#cmd-markdown-高阶语法手册
-[3]: http://weibo.com/ghosert
-[4]: http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference
+- [ ] **Markdown 开发**
+    - [ ] 支持以 PDF 格式导出文稿
+- [ ] **七月旅行准备**
+    - [ ] 准备邮轮上需要携带的物品
+    - [ ] 浏览日本免税店的物品
+    - [x] 购买蓝宝石公主号七月一日的船票
+
+### 24. Html 标签
+
+支持在 Markdown 语法中嵌套 `Html` 标签，譬如，你可以用 Html 写一个纵跨两行的表格：
+
+&lt;table&gt;
+    &lt;tr&gt;
+        &lt;th rowspan="2"&gt;值班人员&lt;/th&gt;
+        &lt;th&gt;星期一&lt;/th&gt;
+        &lt;th&gt;星期二&lt;/th&gt;
+        &lt;th&gt;星期三&lt;/th&gt;
+    &lt;/tr&gt;
+    &lt;tr&gt;
+        &lt;td&gt;李强&lt;/td&gt;
+        &lt;td&gt;张明&lt;/td&gt;
+        &lt;td&gt;王平&lt;/td&gt;
+    &lt;/tr&gt;
+&lt;/table&gt;
+
+### 25. 内容目录
+
+在段落中填写 `[TOC]` 以显示全文内容的目录结构。
+
+[TOC]
 
 </textarea>
         </div>
@@ -496,7 +726,7 @@ Bob--&gt;Alice: I am good thanks!
     <script>
         Namespace('com.zybuluo.mdeditor');
         com.zybuluo.mdeditor.initData = {
-            markdownHelpUrl: "./static/md-help.markdown",
+            markdownHelpUrl: "./static/md-help.markdown.md",
             downloadPdfUrl: "https://www.zybuluo.com/mdeditor/note/downloadPdf",
             staticAssetsUrl: "./static/assets/",
             staticImgUrl: "./static/img/",
