增加 native 编码解码工具

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_830376_qzecyukz0s.css">
     <script src="config.js"></script>
     <script src="./jstool/base.js"></script>
-    <title></title>
+    <title>在线工具 - 欢迎使用</title>
+    <meta name="keywords" content="在线工具,工具,开发人员工具,Markdown,代码格式化、压缩、加密、解密,json格式化,正则测试工具,js在线运行,JS 调试">
+    <meta name="description" content="在线工具,开发人员工具,代码格式化、压缩、加密、解密,json格式化,Markdown,正则测试工具,js在线运行,JS 调试">
+    <meta name="apple-mobile-web-app-title" content="在线工具">
   </head>
   <body>
     <noscript>
-      <strong>Hello</strong>
+      <strong>在线工具</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
