--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_830376_qzecyukz0s.css">
-    <script src="config.js"></script>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="/fonts/style.css" />
     <script src="./jstool/base.js"></script>
-    <title>在线工具 - 欢迎使用</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="keywords" content="在线工具,工具,开发人员工具,Markdown,代码格式化、压缩、加密、解密,json格式化,正则测试工具,js在线运行,JS 调试">
     <meta name="description" content="在线工具,开发人员工具,代码格式化、压缩、加密、解密,json格式化,Markdown,正则测试工具,js在线运行,JS 调试">
     <meta name="apple-mobile-web-app-title" content="在线工具">
   </head>
   <body>
     <noscript>
-      <strong>在线工具</strong>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
