--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="/fonts/style.css" />
+    <link rel="icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./fonts/style.css" />
     <script src="./jstool/base.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="keywords" content="在线工具,工具,开发人员工具,Markdown,代码格式化、压缩、加密、解密,json格式化,正则测试工具,js在线运行,JS 调试">
